add config/docs/install scripts

--- a/config/opencall.ini
+++ b/config/opencall.ini
@@ -1,12 +1,13 @@
 # System Configuration File
 #
-# Purpose: B2BUA 1.1 Belador, provide Connection control for Mobicents (OpenCall System)
+# Purpose: Opencall 1.1 Belador, provide Connection control for Mobicents (OpenCall System)
+#
 # Author: Gonzalo Gasca Meza
 # Oxford University
 # Department of Computer Science, Wolfson Building,  
 # Parks Rd, Oxford OX1, United Kingdom
 # +44 1865 273838
-# Version 1.000(01) Comendador
+# Opencall Version 1.1(000) Comendador
 #
 #
 #	MODE 
@@ -21,7 +22,7 @@
 #
 # MODE 1 must have CALLRULES
 # MODE 2 must have DBTYPE,DBHOSTNAME,DBPORT,DBNAME,DBUSERNAME and DBPASSWORD
-# MODE 3 does not need any params
+# MODE 3 does not need any params (Use built-in files)
 #
 MODE=1
 RULE_LIMIT=100
