--- a/config/opencallrules.cfg
+++ b/config/opencallrules.cfg
@@ -6,7 +6,7 @@
 # Department of Computer Science, Wolfson Building,  
 # Parks Rd, Oxford OX1, United Kingdom
 # +44 1865 273838
-# Version 1.1(000) Comendador
+# Opencall Version 1.1(000) Comendador
 #		
 #       ROUTE= 
 #       Mandatory parameters:
