--- a/config/opencallrules.cfg
+++ b/config/opencallrules.cfg
@@ -50,4 +50,6 @@ ROUTE=("13","10","NUMERIC","+14089449402","110.10.0.200","5060")
 #
 #
 #
-ROUTELIST=("LOCAL","1.1.1.1","2.2.2.2","3.3.3.3")
+ROUTELIST=("LOCAL","1.1.1.1","1.1.1.2","1.1.1.3")
+ROUTELIST=("LD","2.2.2.1","2.2.2.2","2.2.2.3")
+ROUTELIST=("INTERNATIONAL","3.3.3.1","3.3.3.2","3.3.3.3")
