US1 TA1 Update configuration files

--- a/config/opencallroutelist.cfg
+++ b/config/opencallroutelist.cfg
@@ -1,5 +1,5 @@
 # Configuration File
-# Purpose: Call Control Routing rules for OpenCall
+# Purpose: Call Control Routing List rules for OpenCall
 #
 # Author: Gonzalo Gasca Meza
 # Oxford University
@@ -13,13 +13,14 @@
 # 		ROUTELIST=
 #       Mandatory parameters:
 #       NAME     = STRING
-#		LIST OF IP ADDRESS/HOSTNAME
+#		LIST OF IP ADDRESS/HOSTNAME/DOMAIN
+#		SUPPORTS UP TO 5 SERVERS
 #
 #
 #
 #
 ROUTELIST=("LOCAL","1.1.1.1","2.2.2.2","3.3.3.3")
-ROUTELIST=("LD","WILDCARD","2.2.2.2","3.3.3.3")
+ROUTELIST=("LD","1.1.1.1","2.2.2.2","3.3.3.3","cisco.com","voip.cisco.com")
 ROUTELIST=("INTERNATIONAL","3.3.3.3")
 ROUTELIST=("SIPPROVIDER","192.168.1.10")
 ROUTELIST=("CISCO","cisco.com")
