--- a/config/opencalltransforms.cfg
+++ b/config/opencalltransforms.cfg
@@ -1,6 +1,6 @@
 # Configuration File
 #
-# Purpose: Call Control Routing rules for OpenCall
+# Purpose: Call Control Transform rules for OpenCall
 # Author: Gonzalo Gasca Meza
 # Oxford University
 # Department of Computer Science, Wolfson Building,  
