US1 TA2 Update java code

--- a/config/opencallrules.cfg
+++ b/config/opencallrules.cfg
@@ -10,27 +10,24 @@
 #		
 #       ROUTE= 
 #       Mandatory parameters:
-#       RULE     = NUMERIC
-#       PRIORITY = NUMERIC
-#       TYPE     = REGEX,  WILDCARD, NUMERIC
-#       STRING   = VALUE
-#       TARGET   = IP ADDRESS, HOSTNAME, _DNS_
+#       RULE      = NUMERIC
+#       PRIORITY  = NUMERIC
+#       TYPE      = REGEX,  WILDCARD, NUMERIC
+#       STRING    = VALUE
+#       TARGET    = IP ADDRESS, HOSTNAME, _DNS_
 #       
 #       Optional
-#       PORT     = NUMERIC VALUE (DEFAULT 5060)
+#       PORT      = NUMERIC VALUE (DEFAULT 5060)
+#		TRANSPORT = TCP, UDP, TLS, WS
+#					TCP: Transport Connection Protocol
+#					UDP: User Datagram Protocol
+#					TLS: Transport Layer Security (Requires Mobicent secure setup installation)
+#					 WS: Web Sockets
 #
 #       RULES ENTRIES
 #       RULE NUMBER,RULE PRIORITY, RULE TYPE, MATCH STRING,TARGET, PORT TARGET
 #
 #
-# 		TRANSFORM=
-#       Mandatory parameters:
-#       TYPE     = REGEX,  WILDCARD, NUMERIC
-#       ORIGINAL STRING   = VALUE
-#       FINAL    STRING   = VALUE
-#
-#
-#		TRANSFORMS ARE APPLIED FIRST, THEN ROUTE PATTERNS
 #
 #
 #
@@ -47,9 +44,3 @@ ROUTE=("10","50","WILDCARD","0115233!","110.10.0.200","5060")
 ROUTE=("11","1","NUMERIC","+525557969469","110.10.0.200","5060")
 ROUTE=("12","1","WILDCARD","4XX","110.10.0.220","5060")
 ROUTE=("13","10","NUMERIC","+14089449402","110.10.0.200","5060")
-#
-#
-#
-ROUTELIST=("LOCAL","1.1.1.1","1.1.1.2","1.1.1.3")
-ROUTELIST=("LD","2.2.2.1","2.2.2.2","2.2.2.3")
-ROUTELIST=("INTERNATIONAL","3.3.3.1","3.3.3.2","3.3.3.3")
