--- a/config/opencalltransforms.cfg
+++ b/config/opencalltransforms.cfg
@@ -13,6 +13,8 @@
 # 		TRANSFORM=
 #       Mandatory parameters:
 #       RULE     = NUMERIC
+#				   If Rule is 0, applies to all incoming calls
+#
 #       TYPE     = REGEX,  WILDCARD, NUMERIC
 #       ORIGINAL STRING   = VALUE
 #       FINAL    STRING   = VALUE
@@ -22,6 +24,7 @@
 #		TRANSFORM CALLED NUMBER ARE APPLIED FIRST, THEN ROUTE PATTERNS
 #
 #
+TRANSFORM=("0","WILDCARD","+5255!","01152!","CALLED")
 TRANSFORM=("1","WILDCARD","+5255!","01152!","CALLED")
 TRANSFORM=("2","WILDCARD","XXXXXXXX","18668643232**XXXXXXXX","CALLED")
 TRANSFORM=("3","NUMERIC","201","9201","CALLING")
