US1 TA1 Update configuration files

--- a/config/opencallrules.cfg
+++ b/config/opencallrules.cfg
@@ -18,6 +18,7 @@
 #       
 #       Optional
 #       PORT      = NUMERIC VALUE (DEFAULT 5060)
+#		TRANSPORT is not configurable when doing _DNS_ lookup
 #		TRANSPORT = TCP, UDP, TLS, WS
 #					TCP: Transport Connection Protocol
 #					UDP: User Datagram Protocol
@@ -28,7 +29,11 @@
 #       RULE NUMBER,RULE PRIORITY, RULE TYPE, MATCH STRING,TARGET, PORT TARGET
 #
 #
-#
+#		
+#		ROUTE=("1","100","REGEX","(.*)@.*","_DNS_")
+#		ROUTE=("3","10","NUMERIC","201","192.168.1.10","5060","UDP")
+#		ROUTE=("4","100","WILDCARD","20X","110.10.0.200","WS")
+#		ROUTE=("8","50","WILDCARD","20X","110.10.0.210","5061","TLS")
 #
 #
 ROUTE=("1","100","REGEX","(.*)@.*","_DNS_")
