--- a/config/opencalltransforms.cfg
+++ b/config/opencalltransforms.cfg
@@ -13,19 +13,21 @@
 # 		TRANSFORM=
 #       Mandatory parameters:
 #       RULE     = NUMERIC
-#				   If Rule is 0, applies to all incoming calls
+#				  Rules apply to all incoming calls, in order of rule order
 #
-#       TYPE     = REGEX,  WILDCARD, NUMERIC
-#       ORIGINAL STRING   = VALUE
-#       FINAL    STRING   = VALUE
-#		APPLYTO  = CALLED, CALLING, REDIRECT
+#       TYPE     			= REGEX, WILDCARD, NUMERIC
+#       ORIGINAL STRING   	= VALUE
+#       FINAL    STRING   	= VALUE
+#		APPLYTO  			= CALLED, CALLING, REDIRECT
+#		BLOCK CALLS 		= TRUE, FALSE
+#		ENABLED  			= TRUE, FALSE
+#
 #
 #
 #		TRANSFORM CALLED NUMBER ARE APPLIED FIRST, THEN ROUTE PATTERNS
 #
 #
-TRANSFORM=("0","WILDCARD","+5255!","01152!","CALLED")
-TRANSFORM=("1","WILDCARD","+5255!","01152!","CALLED")
-TRANSFORM=("2","WILDCARD","XXXXXXXX","18668643232**XXXXXXXX","CALLED")
-TRANSFORM=("3","NUMERIC","201","9201","CALLING")
-TRANSFORM=("4","REGEX","(.*)@.*","$1","REDIRECT")
+TRANSFORM=("1","WILDCARD","+5255!","01152!","CALLED","TRUE","FALSE")
+TRANSFORM=("2","WILDCARD","XXXXXXXX","18668643232**XXXXXXXX","CALLED","TRUE","FALSE")
+TRANSFORM=("3","NUMERIC","201","9201","CALLING","TRUE","FALSE")
+TRANSFORM=("4","REGEX","(.*)@.*","$1","REDIRECT","FALSE","FALSE")
