US1 TA2 Update java code

--- a/config/opencallroutelist.cfg
+++ b/config/opencallroutelist.cfg
@@ -13,13 +13,13 @@
 # 		ROUTELIST=
 #       Mandatory parameters:
 #       NAME     = STRING
-#		LIST OF IP ADDRESS/HOSTNAME/DOMAIN
+#		LIST OF IP ADDRESS/HOSTNAME/DOMAIN		LIST OF PORT		LIST OF TRANSPORT
 #		SUPPORTS UP TO 5 SERVERS
 #
 #
 #
 #
-ROUTELIST=("LOCAL","1.1.1.1","2.2.2.2","3.3.3.3")
+ROUTELIST=("LOCAL","1.1.1.1:TLS","2.2.2.2:5060:TCP","3.3.3.3:UDP")
 ROUTELIST=("LD","1.1.1.1","2.2.2.2","3.3.3.3","cisco.com","voip.cisco.com")
 ROUTELIST=("INTERNATIONAL","3.3.3.3")
 ROUTELIST=("SIPPROVIDER","192.168.1.10")
