--- a/config/opencallrules.cfg
+++ b/config/opencallrules.cfg
@@ -14,26 +14,27 @@
 #       PRIORITY  = NUMERIC
 #       TYPE      = REGEX,  WILDCARD, NUMERIC
 #       STRING    = VALUE
-#       TARGET    = IP ADDRESS, HOSTNAME, _DNS_
+#       TARGET    = IP ADDRESS, HOSTNAME, _DNS_, ROUTELIST
 #       
-#       Optional
+#       Optional:
+#		PORT and TRANSPORT is not configurable when using _DNS_ lookup
+#		PORT and TRANSPORT is not configurable when using RouteList, you can define parameters there.
 #       PORT      = NUMERIC VALUE (DEFAULT 5060)
-#		TRANSPORT is not configurable when doing _DNS_ lookup
 #		TRANSPORT = TCP, UDP, TLS, WS
 #					TCP: Transport Connection Protocol
 #					UDP: User Datagram Protocol
 #					TLS: Transport Layer Security (Requires Mobicent secure setup installation)
 #					 WS: Web Sockets
 #
-#       RULES ENTRIES
-#       RULE NUMBER,RULE PRIORITY, RULE TYPE, MATCH STRING,TARGET, PORT TARGET
-#
-#
 #		
+#       RULES ENTRIES
+#       RULE NUMBER,RULE PRIORITY, RULE TYPE, MATCH STRING,TARGET, PORT TARGET, TRANSPORT
+#
 #		ROUTE=("1","100","REGEX","(.*)@.*","_DNS_")
 #		ROUTE=("3","10","NUMERIC","201","192.168.1.10","5060","UDP")
 #		ROUTE=("4","100","WILDCARD","20X","110.10.0.200","WS")
 #		ROUTE=("8","50","WILDCARD","20X","110.10.0.210","5061","TLS")
+#		ROUTE=("11","1","NUMERIC","+525557969469","LOCAL")
 #
 #
 ROUTE=("1","100","REGEX","(.*)@.*","_DNS_")
