--- a/config/opencalltransforms.cfg
+++ b/config/opencalltransforms.cfg
@@ -24,10 +24,11 @@
 #
 #
 #
-#		TRANSFORM CALLED NUMBER ARE APPLIED FIRST, THEN ROUTE PATTERNS
+#		TRANSFORMATIONS TO NUMBERS ARE APPLIED FIRST, THEN ROUTE PATTERNS
 #
 #
-TRANSFORM=("1","WILDCARD","+5255!","01152!","CALLED","TRUE","FALSE")
-TRANSFORM=("2","WILDCARD","XXXXXXXX","18668643232**XXXXXXXX","CALLED","TRUE","FALSE")
+TRANSFORM=("1","WILDCARD","+5255!","01152!","CALLED","FALSE","FALSE")
+TRANSFORM=("2","WILDCARD","XXXXXXXX","18668643232**XXXXXXXX","CALLED","FALSE","FALSE")
 TRANSFORM=("3","NUMERIC","201","9201","CALLING","TRUE","FALSE")
 TRANSFORM=("4","REGEX","(.*)@.*","$1","REDIRECT","FALSE","FALSE")
+TRANSFORM=("5","WILDCARD","+!","011!","CALLED","FALSE","TRUE")
