US1 TA2 Update java code

--- a/config/opencall.ini
+++ b/config/opencall.ini
@@ -24,6 +24,10 @@
 # MODE 2 must have DBTYPE,DBHOSTNAME,DBPORT,DBNAME,DBUSERNAME and DBPASSWORD
 # MODE 3 does not need any params (Use built-in files)
 #
+# When a call is received CALLTRANSFORMS are applied first, then call is passed to CALLRULES
+# TRANSPORT=TCP
+#
+#
 #
 MODE=1
 RULE_LIMIT=100
