--- a/config/opencallrules.cfg
+++ b/config/opencallrules.cfg
@@ -39,11 +39,11 @@
 #
 ROUTE=("1","100","REGEX","(.*)@.*","_DNS_")
 ROUTE=("2","5","REGEX","(.*)@videolab.att.com","_DNS_")
-ROUTE=("3","10","NUMERIC","201","192.168.1.10","5060")
-ROUTE=("4","100","WILDCARD","20X","110.10.0.200")
+ROUTE=("3","10","NUMERIC","201","192.168.1.10","5060","TCP")
+ROUTE=("4","100","WILDCARD","20X","110.10.0.200","TLS")
 ROUTE=("5","10","WILDCARD","10X","110.10.0.200")
-ROUTE=("6","10","WILDCARD","XXXXXXXX","videoalpha.att.com")
-ROUTE=("7","10","WILDCARD","XXXXXXXX","videolab.att.com")
+ROUTE=("6","10","WILDCARD","XXXXXXXX","videoalpha.att.com","TLS")
+ROUTE=("7","10","WILDCARD","XXXXXXXX","videolab.att.com","WSS")
 ROUTE=("8","50","WILDCARD","20X","110.10.0.210","5060")
 ROUTE=("9","50","WILDCARD","0115255!","110.10.0.200","5060")
 ROUTE=("10","50","WILDCARD","0115233!","110.10.0.200","5060")
