US1 TA2 Update java code

--- a/config/opencallroutelist.cfg
+++ b/config/opencallroutelist.cfg
@@ -13,8 +13,8 @@
 # 		ROUTELIST=
 #       Mandatory parameters:
 #       NAME     = STRING
-#		LIST OF IP ADDRESS/HOSTNAME/DOMAIN		LIST OF PORT		LIST OF TRANSPORT
-#		SUPPORTS UP TO 5 SERVERS
+#		LIST OF IP ADDRESS/HOSTNAME/DOMAIN		LIST OF PORT(Optional)		LIST OF TRANSPORT(Optional)
+#		*SUPPORTS UP TO 5 SERVERS
 #
 #
 #
