--- a/config/opencalltransforms.cfg
+++ b/config/opencalltransforms.cfg
@@ -12,23 +12,27 @@
 #
 # 		TRANSFORM=
 #       Mandatory parameters:
+
 #       RULE     = NUMERIC
 #				  Rules apply to all incoming calls, in order of rule order
 #
 #       TYPE     			= REGEX, WILDCARD, NUMERIC
+#		ENABLED  			= TRUE, FALSE
 #       ORIGINAL STRING   	= VALUE
 #       FINAL    STRING   	= VALUE
-#		APPLYTO  			= CALLED, CALLING, REDIRECT
+#		APPLYTO  			= CALLING, CALLED, REDIRECT
 #		BLOCK CALLS 		= TRUE, FALSE
-#		ENABLED  			= TRUE, FALSE
 #
-#
+#		Optional:
+#		No Optional parameters
 #
 #		TRANSFORMATIONS TO NUMBERS ARE APPLIED FIRST, THEN ROUTE PATTERNS
 #
 #
-TRANSFORM=("1","WILDCARD","+5255!","01152!","CALLED","FALSE","FALSE")
-TRANSFORM=("2","WILDCARD","XXXXXXXX","18668643232**XXXXXXXX","CALLED","FALSE","FALSE")
-TRANSFORM=("3","NUMERIC","201","9201","CALLING","TRUE","FALSE")
-TRANSFORM=("4","REGEX","(.*)@.*","$1","REDIRECT","FALSE","FALSE")
-TRANSFORM=("5","WILDCARD","+!","011!","CALLED","FALSE","TRUE")
+TRANSFORM=("1","TRUE","WILDCARD","+!","011!","CALLED","FALSE")
+TRANSFORM=("2","FALSE","WILDCARD","XXXXXXXX","18668643232**XXXXXXXX","CALLED","FALSE")
+TRANSFORM=("3","FALSE","NUMERIC","201","9201","CALLING","TRUE")
+TRANSFORM=("4","FALSE","REGEX","(.*)@.*","$1","REDIRECT","FALSE")
+TRANSFORM=("5","TRUE","WILDCARD","+!","011!","CALLED","FALSE")
+TRANSFORM=("6","TRUE","REGEX","(408(\d+){7})","1(\1)","CALLING","FALSE")
+TRANSFORM=("7","TRUE","REGEX","(.*)@.attlabs.com","(.*)@videolab.att.com","CALLED","FALSE")
