Add Twilio Parameters

--- a/config/opencall.ini
+++ b/config/opencall.ini
@@ -3,7 +3,7 @@
 # Purpose: Opencall 1.1 Belador, provide Connection control for Mobicents (OpenCall System)
 #
 # Author: Gonzalo Gasca Meza
-# Oxford University
+# University of Oxford
 # Department of Computer Science, Wolfson Building,  
 # Parks Rd, Oxford OX1, United Kingdom
 # +44 1865 273838
@@ -40,5 +40,10 @@ DBPORT=3306
 DBNAME=opencall
 DBUSERNAME=root
 DBPASSWORD=
+
+# Twilio Support
+TWILIO_DOMAIN=opencall.sip.twilio.com
+TWILIO_ACCOUNT_SID=AC433e7b0bec93dc5996e4fb80b1e56eec
+TWILIO_AUTH_TOKEN=9cc9267fe09dab362d3be160f711a09d
 
 
