--- a/config/opencallrules.cfg
+++ b/config/opencallrules.cfg
@@ -21,10 +21,14 @@
 #		PORT and TRANSPORT is not configurable when using RouteList, you can define parameters there.
 #       PORT      = NUMERIC VALUE (DEFAULT 5060)
 #		TRANSPORT = TCP, UDP, TLS, WS
+#
 #					TCP: Transport Connection Protocol
 #					UDP: User Datagram Protocol
 #					TLS: Transport Layer Security (Requires Mobicent secure setup installation)
-#					 WS: Web Sockets
+#					WS:  Web Sockets
+#					WSS: Secure Web Sockets
+#					TWILIO: Twilio					
+#					
 #
 #		
 #       RULES ENTRIES
@@ -35,6 +39,7 @@
 #		ROUTE=("4","100","WILDCARD","20X","110.10.0.200","WS")
 #		ROUTE=("8","50","WILDCARD","20X","110.10.0.210","5061","TLS")
 #		ROUTE=("11","1","NUMERIC","+525557969469","LOCAL")
+#		ROUTE=("14","10","NUMERIC","+14089449402","TWILIO")
 #
 #
 ROUTE=("1","100","REGEX","(.*)@.*","_DNS_")
@@ -50,3 +55,5 @@ ROUTE=("10","50","WILDCARD","0115233!","110.10.0.200","5060")
 ROUTE=("11","1","NUMERIC","+525557969469","110.10.0.200","5060")
 ROUTE=("12","1","WILDCARD","4XX","110.10.0.220","5060")
 ROUTE=("13","10","NUMERIC","+14089449402","110.10.0.200","5060")
+ROUTE=("14","10","NUMERIC","+14089449402","110.10.0.200","5060")
+
