Added Transformation WildCard support compiled

--- a/config/opencallrules.cfg
+++ b/config/opencallrules.cfg
@@ -14,7 +14,7 @@
 #       PRIORITY  = NUMERIC
 #       TYPE      = REGEX,  WILDCARD, NUMERIC
 #       STRING    = VALUE
-#       TARGET    = IP ADDRESS, HOSTNAME, _DNS_, ROUTELIST
+#       TARGET    = IP ADDRESS, HOSTNAME, _DNS_, _TWILIO_, ROUTELIST 	
 #       
 #       Optional:
 #		PORT and TRANSPORT is not configurable when using _DNS_ lookup
@@ -27,7 +27,7 @@
 #					TLS: Transport Layer Security (Requires Mobicent secure setup installation)
 #					WS:  Web Sockets
 #					WSS: Secure Web Sockets
-#					TWILIO: Twilio					
+#									
 #					
 #
 #		
@@ -55,5 +55,5 @@ ROUTE=("10","50","WILDCARD","0115233!","110.10.0.200","5060")
 ROUTE=("11","1","NUMERIC","+525557969469","110.10.0.200","5060")
 ROUTE=("12","1","WILDCARD","4XX","110.10.0.220","5060")
 ROUTE=("13","10","NUMERIC","+14089449402","110.10.0.200","5060")
-ROUTE=("14","10","NUMERIC","+14089449402","110.10.0.200","5060")
+ROUTE=("14","10","NUMERIC","+14089449402","TWILIO")
 
