Defect: SIP URI Callerid not processed correctly in Calling Rules

--- a/config/opencallrules.cfg
+++ b/config/opencallrules.cfg
@@ -43,8 +43,8 @@
 #
 ROUTE=("1","10","NUMERIC","14082186575","110.10.0.210","5060","UDP")
 ROUTE=("2","5","REGEX","(.*)@videolab.att.com","_DNS_")
-ROUTE=("3","10","NUMERIC","201","192.168.1.10","5060","TCP")
-ROUTE=("4","100","WILDCARD","20X","110.10.0.200","TLS")
+ROUTE=("3","10","NUMERIC","201","172.31.43.74","5060","TCP")
+ROUTE=("4","10","WILDCARD","20X","172.31.43.74","TCP")
 ROUTE=("5","10","WILDCARD","10X","110.10.0.200")
 ROUTE=("6","10","WILDCARD","XXXXXXXX","videoalpha.att.com")
 ROUTE=("7","10","WILDCARD","XXXXXXXX","videolab.att.com","WSS")
