Add callrules processing from XML

--- a/config/opencallrules.cfg
+++ b/config/opencallrules.cfg
@@ -13,7 +13,7 @@
 #       RULE      = NUMERIC
 #       PRIORITY  = NUMERIC
 #       TYPE      = REGEX,  WILDCARD, NUMERIC
-#       STRING    = VALUE
+#       PATTERN    = VALUE
 #       TARGET    = IP ADDRESS, HOSTNAME, _DNS_, ROUTELIST
 #       
 #       Optional:
